middleware works and protedrouts works
